restructured HTML pages

--- a/abbreviations.html
+++ b/abbreviations.html
@@ -11,8 +11,16 @@
     <title>Abbreviations</title>
 </head>
 <body>
-    <header>link to header</header>
-    <h1>Abbreviations foundin the Get into Tech Course</h1>
+  <header>Welcome to Get in Tech Revision</header>
+  <nav>
+      <ul><a href=index.html>Link to index</a></ul>
+      <ul><a href="#">Contact details</a></ul>
+  </nav>
+  <article>
+    <h1>Abbreviations found in the Get into Tech Course</h1>
+    
+    <p id="demo_print">If you would like to print this page please click the button below.</p>
+    <button onclick="window.print()">Print</button>
 
     <h2>Html code</h2>
 
@@ -49,16 +57,16 @@
           <tr>
             <th scope="row">IP</th>
             <td>Internel Protocol</td>
-            <td>Used to identify anything, including real world objects such as people or places, concepts or information resources such as web pages and books. Some URLs provide a meaning of locating and retriving information resouces on a network. It is not limited to website names.  </td>
+            <td>This provides a standard set of rules for sending and receiving data over the Internet.  </td>
           </tr>
           <tr>
-            <th scope="row">URL</th>
-            <td>HTTP</td>
+            <th scope="row">HTTP</th>
             <td>Hypertext Transfer Protocol</td>
+            <td> uses a client-server model to transfer data over the web as part of the Internet protocol suite and defines commands and services used for transmitting webpage data.</td>
           </tr>
             <th scope="col">DOM</th>
             <td >Document Object Model</th>
-            <td >HTML elements can be nested and form a hierarch of nodes</th>
+            <td >HTML elements can be nested and form a hierarch of nodes, defines the logical structure of documents and the way a document is accessed and manipulated</th>
           </tr>
           <tr>
             <th scope="row">HTTPS</th>
@@ -68,7 +76,7 @@
           <tr>
             <th scope="row">GIF</th>
             <td>Graphics Interchange Network</td>
-            <td>Image</td>
+            <td>is a bitmap image format that was developed by a team at the online services provider CompuServe led by American computer scientist Steve Wilhite on 15 June 1987.</td>
           </tr>
           <tr>
             <th scope="row">PNG</th>
@@ -157,9 +165,9 @@
                 <td>User Interface</td>
                 <td> The client-facing console, or website </td>
               </tr>
-              <th scope="row">HTML</th>
-              <td>Hypertext Markup Language JavaScript and XML</td>
-              <td>The language used when designing webpages. HTML5 is the latest version. </td>
+              <th scope="row">HTTP</th>
+              <td>Hypertext Transfer Protocol</td>
+              <td>The set of rules for transferring files, such as text, graphic images, sound for example. </td>
               </tr>
               <tr>
                 <th scope="row">IDE</th>
@@ -177,6 +185,10 @@
               </tr>
         </tbody>
       </table>
-<footer></footer>
+    </article>
+    <footer>
+      <hr>
+        <p> &copy; 2021 Get into Tech </p>
+    </footer>
 </body>
 </html>
