--- a/html.html
+++ b/html.html
@@ -10,34 +10,55 @@
     <title>Html information</title>
 </head>
 <body>
-    <h1>Information about Html </HTML:xml></h1>
-
-    <table>
-        <tr>
+    <header>Welcome to Get in Tech Revision</header>
+    <nav>
+        <ul><a href=index.html>Link to index</a></ul>
+        <ul><a href="#">Contact details</a></ul>
+    </nav>
+    <article>
+        <h1>Information about Html </HTML:xml></h1>
+        <p>HTTML is used to define the content of web pages. CSS is used to specify the layout of web pages. JavaScript is used to program the behaviour of web pages. </p>
+        
+        <table>
+            <tr>
             <th>HTML features</th>
             <th>Description</th>
-        </tr>
-        <tr>
-            <td>Language attribute</td>
-            <td>These inform search engines and accessibility tools such as screen readers of the languae and dialect that is in use on the web page. </td>
-        </tr>   
-            <td>>Start and End tags</td>
-        <tr>
-            <td>Self-closing or empty tags</td>
-        </tr>
-        <tr>      
-            <td>Nested elements</td>
-            <td>HTML elements can be nested and form a hierarch of nodes known as the Document Object Model(DOM)</td>
-        </tr>
-            <td>Attribute</td>
-        <tr>  
-            <td>These usually consists of a start tag, content and an end tag. </td>
-            <td>Elements</td>
-        </tr>
-    </table>
+            </tr>
+            <tr>
+                <td>Language attribute</td>
+                <td>These inform search engines and accessibility tools such as screen readers of the languae and dialect that is in use on the web page. </td>
+            </tr>   
+                <td>>Start and End tags</td>
+            <tr>
+                <td>Self-closing or empty tags</td>
+            </tr>
+            <tr>      
+                <td>Nested elements</td>
+                <td>HTML elements can be nested and form a hierarch of nodes known as the Document Object Model(DOM)</td>
+            </tr>
+                <td>Attribute</td>
+            <tr>  
+                <td>These usually consists of a start tag, content and an end tag. </td>
+                <td>Elements</td>
+            </tr>
+        </table>
+    </article>  
+
+    <article>
+        <h2>Boostrap</h2>
+            <p>Bootstrap is an open source popular product HTML, CSS, JavaScript framework for developing resposive, mobile first web sites.</p>
+            <p>Utilisation of Bootstrap speeds up front-end development and includes HTML, CSS based design templates for typography, forms, buttons, ables, navigation, modals, image carasells and many other elements.</p>
+    </article>
     
+    <article>
     <h2>Types of images </h2>
     <p>JPEG or JPG, GIF or PNG </p>
-    <p></p>
+    <p>Description of the different types and the importance of not converting on type of image to another as data on the image is comprimised.</p>
+    </article>
+
+    <footer>
+        <hr>
+        <p>&copy; 2021 Get into Tech </p>
+    </footer>
 </body>
 </html>
