--- a/internet.html
+++ b/internet.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,21 +11,80 @@
     <title>Internet Technologies</title>
 </head>
 <body>
-    <header><a href=index.html>Link to index</a></header>
-    <h1></h1>
-    <p></p>
-    <list>
-    <lh>information on this page will include:</lh>
-       <ul>
-           <li> What is the internet</li>
+    <header>Welcome to Get in Tech Revision</header>
+    <nav>
+        <ul><a href=index.html>Link to index</a></ul>
+        <ul><a href="#">Contact details</a></ul>
+    </nav>
+    <article>
+        <h1>information on this page will include:</h1>
+        <list>
+        <ul>
+           <li>What is the internet</li>
            <li>Clients, servers and HTTP/S</li>
            <li>The domain name system </li>
            <li>HTTP request methods and request and responses</li>
            <li>Web architechture and Python</li>
            <li>Applications versus APIs</li>
-       </ul>      
-    </list>
-    <p></p>
-    <footer></footer>
+           <li>Benefits of the internet</li>
+        </ul>      
+        </list>
+    </article>
+    <article>
+        <h1>What is the internet?</h1>
+            <p>The internet is a combination of network protocols and hardware. The protocols have a set of rules or guidlelines that devices/users must follow in order to be successful in completing tasks on the internet.</p>
+        
+            <p>The protocols translated the alphabetic requests into electronic signals of bits and bytes which can be sent over the internet and returned back into alphabetic messages.</p>
+
+            <p>The hardware inclues devices (eg computers, mobiles, smartwatches) used to access the internet as well as the cables, satetllites, mobile phone towers, routers and servers.</p>
+
+            <p>Servers hold information. Companies with large websites or databases will often have CND to share the load of people accesing their data. IF one server is damaged or needs updataing, other servers can take over while maintenance work is carried out.</p>
+
+            <p>Each computer has an IP address and a MAC address. The IP address can be purchased by a business or loaned by an internet provider to a user's device.</p>
+
+            <p>The data from the servers is sent in manageable packets of bytes. Each packet is assigned a port number that will connect to its endpoint.</p>
+
+            <p>Examples of ports include 443, 8080</p>
+
+            <p>A packet that has both a unique IP address and a port number will be translated from alphabetic text into electronic signals by travelling through the layers of the OSI model from tej top application layer to the bottom physical layer.</p>
+
+            <p>A router examine the destination address assigned to each packet and determine where it should be sent.</p>
+    </article>
+    <article>
+        <h2>Is the world wide web the internet? No!</h2>
+            <p>The internet is a global connection of networks. The World Wide Web is a collection of information tha can be accessed using the inernet.</p>
+            <p>It is the most widely used part of the internet.</p>
+
+            <p>HTTPS is the secure method of sharing data as it is encrypted when beind shared.</p>
+
+            <p>The dark web is hidden and cannot be accesed through standard browsers. It uses Tor and I"P browsers which allow users to remain entirely annonymous.</p>
+    </article>
+    <article>
+        <h1>An application versus APIs</h1>
+            <p>An application is programme which users interact with. </p>
+
+            <p>An Application programme interface acts as an interface between two applications helping them to communicate with each other. They are used to share data.</p>
+    </article>
+
+    <article>
+        <h1>Benefits of the internet</h1>
+            <list>
+                <ul>
+                    <li>Access to information, knowledge and education</li>
+                    <li>Increased ability to communicate</li>
+                    <li>Employement - the abiliity to work from home to a global workforce</li>
+                    <li>Retail - Online businesses and shopping</li>
+                    <li>For entertainment - games, movies and music sharing</li>
+                    <li>Marketing - reaching wider audiences and collecting data to market more effectively</li>
+                    <li>Cloud data - saving and sharing data</li>
+                    <li>Banking - allows electronic money transfers</li>
+                </ul>
+            </list>
+    </article>
+    
+    <footer>
+        <hr>
+        <p>&copy; 2021 Get into Tech </p>
+    </footer>
 </body>
 </html>
