--- a/python.html
+++ b/python.html
@@ -10,19 +10,28 @@
     <title>Python</title>
 </head>
 <body>
-    <header></header>
-    <h1>What is Python</h1>
-    <article>First published in 1991 by Guido van Rossum
-        <list>
-        <ul>Designed as an OOP language from day one</ul>
-        <ul>Does not need knowledge of OO to use</ul>
-    </list>
-    </article>
+    <header>Welcome to Get in Tech Revision</header>
+    <nav>
+        <ul><a href=index.html>Link to index</a></ul>
+        <ul><a href="#">Contact details</a></ul>
+    </nav>
+
     <article>
-        <h2>What can Python</h2>
-        </h2>
+        <h1>What is Python</h1>
+            <p>First published in 1991 by Guido van Rossum, designed as an OOP language from day one, does not need knowledge of OO to use</p>
+    </article>
+    
+    <article>
+        <h2>What can Python do</h2>
+        <figure>
+            <img src="images/cake3.jpg" alt="One heavenly chocolate cake" size:300px/>
+            <figcaption>This is just a placeholder for what will be a great picture.</figcaption>
+        </figure>
     </article>
 
-    <footer></footer>
+    <footer>
+        <hr>
+        <p> &copy; 2021 Get into Tech</p>    
+    </footer>
 </body>
 </html>
