--- a/js.html
+++ b/js.html
@@ -6,12 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <link rel="styleSheet" type="styleSheet" href="styleSheet.css"/>
+    <link rel="styleSheet" type="text/css" href="styleSheet.css"/>
     <title>JavaScript</title>
 </head>
 <body>
-    <header></header>
-    <h1></h1>
-    <footer></footer>
+    <header>Welcome to Get in Tech Revision</header>
+    <nav>
+        <ul><a href=index.html>Link to index</a></ul>
+        <ul><a href="#">Contact details</a></ul>
+    </nav>
+    <article>
+        <h1>This page will contain information about JavaScript...</h1>
+            <p>...when I find more out about JS.</p>
+    </article>
+    
+    <article>
+        <h2>Here is a starter for 10...</h2>
+            <p>JavaSCript is a cross-platform, object orientated scripting language. It is a small and light weight language. Client-side JavaScript extends the core language by supplying ojects to control a browser and its Document Object Model(DOM). </p>
+            
+            <figure>
+            <img src="images/cake2.jpg" alt="A delicious cake - a moment on the lip's, a lifetime on the hips!" size="200px" >
+            <figcaption>This is just a pretty placeholder.</figcaption>
+            </figure>
+    </article>
+    <footer>
+        <hr>
+        <p>&copy; 2021 Get into Tech</p>
+    </footer>
 </body>
 </html>
